Start of public chat

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -2,5 +2,7 @@
 <resources>
 
     <string name="app_name">blindr</string>
+    <string name="title_activity_public_chat">Public Chat</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
