--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="title_activity_private_chat">Private Chat</string>
+    <string name="title_activity_slideshow">SlideshowActivity</string>
 
 </resources>
