--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_connect_facebook">Connect Facebook</string>
     <string name="app_id">750374798414544</string>
-    <string name="want_to_delete">Do you really want to block this person?</string>
+    <string name="want_to_delete">Do you really want to block %s?</string>
     <string name="want_to_like">Do you really want to like %s?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
