First time use mostly done, need to change the text Fixed #14
Signed-off-by: Marc-Antoine Hinse <marc_antoine_hinse@hotmail.com>

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string name="finish">Finish</string>
     <string name="blindr_desc">blindr drops you in a chatroom populated with the brightest folks in town, while remaining anonymous! blindr allows chatees to « show interest » in one another, matching them personally, revealing their identity.</string>
     <string name="add_pictures">Let others know what you look like!\nAdd a minimum of two pictures</string>
+    <string name="not_enough_pictures">You need to add at least 2 pictures to your profile</string>
 
 </resources>
